feat: allow resend reminder from appointment service
